--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(min-content, 5vw));
+  grid-template-rows: repeat(7, 5vw);
   grid-template-columns: repeat(8, 1fr);
   grid-column: full-start / full-end;
   grid-gap: 1.5rem;
