--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,6 +5,13 @@
 
   display: flex;
   justify-content: center;
+
+  @media screen and (max-width: $bp-large) {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 .nav-btn {
   border: none;
@@ -12,7 +19,7 @@
   background-color: #fff;
   height: 2px;
   width: 4.5rem;
-
+  margin-top: 4rem;
   &::after,
   &::before {
     content: "";
@@ -26,5 +33,15 @@
   }
   &::after {
     transform: translateY(1.3rem);
+  }
+  @media screen and (max-width: $bp-large) {
+    margin-top: 0;
+    margin-right: 3rem;
+    &::before {
+      transform: translateY(-1.2rem);
+    }
+    &::after {
+      transform: translateY(1rem);
+    }
   }
 }
