--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -7,16 +7,27 @@
         rgba($color-primary, 0.5)
       ),
       url(../img/back.jpg);
+    background-size: cover;
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+    @media screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
   &__img--1 {
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+    @media screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+      height: 100%;
+      width: 100%;
+    }
   }
   &__img--2 {
     width: 125%;
@@ -24,6 +35,10 @@
     grid-column: 4/7;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+    @media screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
   &__content {
     background-color: $color-grey-light-1;
@@ -33,6 +48,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    @media screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
   &__text {
     font-size: 1.5rem;
