--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -17,7 +17,7 @@
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center;
-    @media screen and (max-width: $bp-large) {
+    @media screen and (max-width: $bp-medium) {
       grid-template-columns: repeat(3, min-content max-content);
     }
     @media screen and (max-width: $bp-small) {
